// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      hey
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      hey
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL esHwOj"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gUZrlL efCBak"
    role="document"
  >
    <div
      class="sc-lbpHHC jRmSVS sc-cazgaA iEMcSZ"
      tabindex="0"
    >
      <span
        class="sc-hjzcVK hGPHoF"
      >
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hsGrfh gkhYRa"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jmFtRP ikKQuB sc-eVIgCb SHhNI"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dUyiNi gYkveP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hsGrfh gkhYRa"
    >
      : 
    </i>
    <span
      class="sc-kSWEWq gYEXMg"
    >
      Hey
       
      <span
        class="sc-jmFtRP ikKQuB sc-dvoNbV cQAvMR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dUyiNi gYkveP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
